--- a/MOD1/Artifact01-Resume/index.html
+++ b/MOD1/Artifact01-Resume/index.html
@@ -147,5 +147,10 @@
         </p>
     </address>
 <!-- Image for HTML validator -->
+        <p>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjeremycorpuz.github.io%2FPROG109%2FMOD1%2FArtifact01-Resume%2F" target="_blank">
+                <img src="https://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5" title="HTML5">
+            </a>
+        </p>
 </body>
 </html>
