--- a/MOD2/Module-Tables/table.html
+++ b/MOD2/Module-Tables/table.html
@@ -14,7 +14,7 @@
         <table border="1" cellpadding="10">
             <!-- First Row -->
             <tr>
-                <th colspan="3"><h1>HTML Table Example</h1></th>
+                <td colspan="3" style="text-align: center;"><h1>HTML Table Example</h1></td>
             </tr>
             <!-- Second Row -->
             <tr>
@@ -31,7 +31,7 @@
                 <th>2/15/2018</th>
                 <th>Instructions</th>
             </tr>
-            <!-- Fourth Row <b> does not surround <td> tags??-->
+            <!-- Fourth Row -->
             <tr>
                 <td><b>Day of the Week</b></td>
                 <td><b>Recipe Name</b></td>
