--- a/MOD3/Module-Assignment/index.html
+++ b/MOD3/Module-Assignment/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>The Cottage Garden</h1>
     <p>The <i>cottage garden</i> is a distinct style of garden that uses an informal design, dense plantings, and a mixture of ornamental and edible plants.</p>
-    <p>The Cottage Garden orginated in <a href="">England</a> and its histort can be traced back for centuries, although they were re-inveneted in 1870's England, when stylized versions were formed as a reaction to the more structued and vigorously maintained <a href="">English estate gardens</a>.</p>
+    <p>The Cottage Garden orginated in <a href="">England</a> and its history can be traced back for centuries, although they were re-inveneted in 1870's England, when stylized versions were formed as a reaction to the more structued and vigorously maintained <a href="">English estate gardens</a>.</p>
     <p>The earliest cottage gardens were more practical than their modern descendants, with an emphasis on vegetables and herbs, along with some fruit trees.</p>
 </body>
 </html>
