--- a/MOD3/Artifact02/chessboard.html
+++ b/MOD3/Artifact02/chessboard.html
@@ -3,38 +3,38 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/archivo-narrow" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/youngserif" type="text/css"/>
     <title>Artifact #2: Create a Chessboard - Jeremy Labuguen</title>
 </head>
 
 <body>
     <!-- Title -->
     <h1 id="title">Chessboard</h1>
-    <!-- Chessboard -->
+    <!-- Chessboard Container-->
     <div id="container">
         <!-- Row One -->
         <div class="row">
-            <div class="white"><img src="images/black-castle.png" alt="black castle"></div>
-            <div class="black"><img src="images/black-knight.png" alt="black knight"></div>
-            <div class="white"><img src="images/black-bishop.png" alt="black bishop"></div>
-            <div class="black"><img src="images/black-queen.png" alt="black queen"></div>
-            <div class="white"><img src="images/black-king.png" alt="black king"></div>
-            <div class="black"><img src="images/black-bishop.png" alt="black bishop"></div>
-            <div class="white"><img src="images/black-knight.png" alt="black knight"></div>
-            <div class="black"><img src="images/black-castle.png" alt="black castle"></div>
+            <div class="white"><img class="piece" src="images/black-castle.png" alt="black castle"></div>
+            <div class="black"><img class="piece" src="images/black-knight.png" alt="black knight"></div>
+            <div class="white"><img class="piece" src="images/black-bishop.png" alt="black bishop"></div>
+            <div class="black"><img class="piece" src="images/black-queen.png" alt="black queen"></div>
+            <div class="white"><img class="piece" src="images/black-king.png" alt="black king"></div>
+            <div class="black"><img class="piece" src="images/black-bishop.png" alt="black bishop"></div>
+            <div class="white"><img class="piece" src="images/black-knight.png" alt="black knight"></div>
+            <div class="black"><img class="piece" src="images/black-castle.png" alt="black castle"></div>
         </div>
         <div class="clear"></div>
         <!-- Row Two -->
         <div class="row">
-            <div class="black"><img src="images/black-pawn.png" alt="black pawn"></div>
-            <div class="white"><img src="images/black-pawn.png" alt="black pawn"></div>
-            <div class="black"><img src="images/black-pawn.png" alt="black pawn"></div>
-            <div class="white"><img src="images/black-pawn.png" alt="black pawn"></div>
-            <div class="black"><img src="images/black-pawn.png" alt="black pawn"></div>
-            <div class="white"><img src="images/black-pawn.png" alt="black pawn"></div>
-            <div class="black"><img src="images/black-pawn.png" alt="black pawn"></div>
-            <div class="white"><img src="images/black-pawn.png" alt="black pawn"></div>
+            <div class="black"><img class="piece" src="images/black-pawn.png" alt="black pawn"></div>
+            <div class="white"><img class="piece" src="images/black-pawn.png" alt="black pawn"></div>
+            <div class="black"><img class="piece" src="images/black-pawn.png" alt="black pawn"></div>
+            <div class="white"><img class="piece" src="images/black-pawn.png" alt="black pawn"></div>
+            <div class="black"><img class="piece" src="images/black-pawn.png" alt="black pawn"></div>
+            <div class="white"><img class="piece" src="images/black-pawn.png" alt="black pawn"></div>
+            <div class="black"><img class="piece" src="images/black-pawn.png" alt="black pawn"></div>
+            <div class="white"><img class="piece" src="images/black-pawn.png" alt="black pawn"></div>
         </div>
         <div class="clear"></div>
         <!-- Row Three -->
@@ -87,34 +87,33 @@
         <div class="clear"></div>
         <!-- Row Seven -->
         <div class="row">
-            <div class="white"><img src="images/gold-pawn.png" alt="gold pawn"></div>
-            <div class="black"><img src="images/gold-pawn.png" alt="gold pawn"></div>
-            <div class="white"><img src="images/gold-pawn.png" alt="gold pawn"></div>
-            <div class="black"><img src="images/gold-pawn.png" alt="gold pawn"></div>
-            <div class="white"><img src="images/gold-pawn.png" alt="gold pawn"></div>
-            <div class="black"><img src="images/gold-pawn.png" alt="gold pawn"></div>
-            <div class="white"><img src="images/gold-pawn.png" alt="gold pawn"></div>
-            <div class="black"><img src="images/gold-pawn.png" alt="gold pawn"></div>
+            <div class="white"><img class="piece" src="images/gold-pawn.png" alt="gold pawn"></div>
+            <div class="black"><img class="piece" src="images/gold-pawn.png" alt="gold pawn"></div>
+            <div class="white"><img class="piece" src="images/gold-pawn.png" alt="gold pawn"></div>
+            <div class="black"><img class="piece" src="images/gold-pawn.png" alt="gold pawn"></div>
+            <div class="white"><img class="piece" src="images/gold-pawn.png" alt="gold pawn"></div>
+            <div class="black"><img class="piece" src="images/gold-pawn.png" alt="gold pawn"></div>
+            <div class="white"><img class="piece" src="images/gold-pawn.png" alt="gold pawn"></div>
+            <div class="black"><img class="piece" src="images/gold-pawn.png" alt="gold pawn"></div>
         </div>
-        <div class="clear"></div>
+        <div class="clear"></div><link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/youngserif" type="text/css"/>
         <!-- Row Eight -->
         <div class="row">
-            <div class="black"><img src="images/gold-castle.png" alt="gold castle"></div>
-            <div class="white"><img src="images/gold-knight.png" alt="gold knight"></div>
-            <div class="black"><img src="images/gold-bishop.png" alt="gold bishop"></div>
-            <div class="white"><img src="images/gold-queen.png" alt="gold queen"></div>
-            <div class="black"><img src="images/gold-king.png" alt="gold king"></div>
-            <div class="white"><img src="images/gold-bishop.png" alt="gold bishop"></div>
-            <div class="black"><img src="images/gold-knight.png" alt="gold knight"></div>
-            <div class="white"><img src="images/gold-castle.png" alt="gold castle"></div>
+            <div class="black"><img class="piece" src="images/gold-castle.png" alt="gold castle"></div>
+            <div class="white"><img class="piece" src="images/gold-knight.png" alt="gold knight"></div>
+            <div class="black"><img class="piece" src="images/gold-bishop.png" alt="gold bishop"></div>
+            <div class="white"><img class="piece" src="images/gold-queen.png" alt="gold queen"></div>
+            <div class="black"><img class="piece" src="images/gold-king.png" alt="gold king"></div>
+            <div class="white"><img class="piece" src="images/gold-bishop.png" alt="gold bishop"></div>
+            <div class="black"><img class="piece" src="images/gold-knight.png" alt="gold knight"></div>
+            <div class="white"><img class="piece" src="images/gold-castle.png" alt="gold castle"></div>
         </div>
     </div>
-
-    <!-- Footer -->
     <div class="clear"> </div>
+    <!-- Footer -->
     <div id="footer">
         <p>
-            <a href="http://validator.w3.org/check?uri=referer" target="_blank">
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjeremycorpuz.github.io%2FPROG109%2FMOD3%2FArtifact02%2Fchessboard.html" target="_blank">
                 <img src="http://www.w3.org/Icons/valid-xhtml10" 
                      alt="Valid XHTML 1.0" 
                      height="31"
