--- a/MOD3/Artifact02/chessboard.html
+++ b/MOD3/Artifact02/chessboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/youngserif" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/youngserif" type="text/css">
     <title>Artifact #2: Create a Chessboard - Jeremy Labuguen</title>
 </head>
 
