--- a/MOD3/Artifact02/chessboard.html
+++ b/MOD3/Artifact02/chessboard.html
@@ -96,7 +96,7 @@
             <div class="white"><img class="piece" src="images/gold-pawn.png" alt="gold pawn"></div>
             <div class="black"><img class="piece" src="images/gold-pawn.png" alt="gold pawn"></div>
         </div>
-        <div class="clear"></div><link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/youngserif" type="text/css"/>
+        <div class="clear"></div>
         <!-- Row Eight -->
         <div class="row">
             <div class="black"><img class="piece" src="images/gold-castle.png" alt="gold castle"></div>
