--- a/MOD3/Artifact02/chessboard.html
+++ b/MOD3/Artifact02/chessboard.html
@@ -119,7 +119,7 @@
                      height="31"
                      width="88">
             </a>
-            <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fjeremycorpuz.github.io%2FPROG109%2FMOD3%2FArtifact02%2Fchessboard.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" target="_blank">
                 <img style="border:0;width:88px;height:31px" 
                      src="http://jigsaw.w3.org/css-validator/images/vcss-blue" 
                      alt="Valid CSS!">
