--- a/MOD4/Module-Assignment/index.html
+++ b/MOD4/Module-Assignment/index.html
@@ -17,19 +17,19 @@
         <div id="nav"> <!-- Navigation Bar -->
             <ul>
                 <li>
-                    <a href>Home</a>
+                    <a href="">Home</a>
                 </li>
                 <li>
-                    <a href>Products</a>
+                    <a href="">Products</a>
                 </li>
                 <li>
-                    <a href>Services</a>
+                    <a href="">Services</a>
                 </li>
                 <li>
-                    <a href>About</a>
+                    <a href="">About</a>
                 </li>
                 <li>
-                    <a href>Contact</a>
+                    <a href="">Contact</a>
                 </li>
             </ul>
         </div>
