--- a/MOD5/Module-Assignment/index.html
+++ b/MOD5/Module-Assignment/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
@@ -11,11 +12,9 @@
 <body>
     <section id="page2">
         <h1>Bullseye</h1>
-        <img src="images/teacher.png" id="teacher2">
-        <section id="blackboard">
-</section>
+        <img src="images/teacher.png" id="teacher2" alt="teacher illustration">
+        <div id="blackboard"></div>
     </section>
-    
+    <script src="calculations.js"></script>
 </body>
-<script src="calculations.js"></script>
 </html>
