--- a/Midterm/artifacts.html
+++ b/Midterm/artifacts.html
@@ -48,11 +48,11 @@
         <ul>
             <li>
                 <h3>01: Resume</h3>
-                <a href="https://jeremycorpuz.github.io/PROG109/MOD1/Artifact01-Resume/" target="_blank"><img id="artifactImages" src="images/Artifact1.png" alt="artifact one image"></a>
+                <a href="https://jeremycorpuz.github.io/PROG109/MOD1/Artifact01-Resume/" target="_blank"><img class="artifactImages" src="images/Artifact1.png" alt="artifact one image"></a>
             </li>
             <li>
                 <h3>02: Chessboard</h3>
-                <a href="https://jeremycorpuz.github.io/PROG109/MOD3/Artifact02/chessboard.html" target="_blank"><img id="artifactImages" src="images/Artifact2.png" alt="artifact two image"></a>
+                <a href="https://jeremycorpuz.github.io/PROG109/MOD3/Artifact02/chessboard.html" target="_blank"><img class="artifactImages" src="images/Artifact2.png" alt="artifact two image"></a>
             </li>
         </ul>
     </div>
