--- a/Midterm/validated.html
+++ b/Midterm/validated.html
@@ -46,13 +46,95 @@
     <h2>Validators</h2>
     <div id="validator">
         <div id="encompassing">
-            <div id="html">
+            <!-- Home -->
+            <h3>Home Page</h3>
+            <div class="html">
                 <h3>HTML Validator</h3>
-                <img src="images/html.png" alt="html validator screenshot">
+                <img src="images/home-html.png" alt="home page html validator screenshot">
             </div>
-            <div id="css">
+            <div class="css">
                 <h3>CSS Validator</h3>
-                <img src="images/css.png" alt="css validator screenshot">
+                <img src="images/home-css.png" alt="home page css validator screenshot">
+            </div>
+            <!-- About -->
+            <h3>About Page</h3>
+            <div class="html">
+                <h3>HTML Validator</h3>
+                <img src="images/about-html.png" alt="about page html validator screenshot">
+            </div>
+            <div class="css">
+                <h3>CSS Validator</h3>
+                <img src="images/about-css.png" alt="about page css validator screenshot">
+            </div>
+            <!-- Coursework -->
+            <h3>Coursework Page</h3>
+            <div class="html">
+                <h3>HTML Validator</h3>
+                <img src="images/coursework-html.png" alt="courswork page html validator screenshot">
+            </div>
+            <div class="css">
+                <h3>CSS Validator</h3>
+                <img src="images/coursework-css.png" alt="coursework page css validator screenshot">
+            </div>
+            <!-- Artifacts -->
+            <h3>Artifacts Page</h3>
+            <div class="html">
+                <h3>HTML Validator</h3>
+                <img src="images/artifacts-html.png" alt="artifacts page html validator screenshot">
+            </div>
+            <div class="css">
+                <h3>CSS Validator</h3>
+                <img src="images/artifacts-css.png" alt="artifacts page css validator screenshot">
+            </div>
+            <!-- Module Assignments -->
+            <h3>Module Assignments Page</h3>
+            <div class="html">
+                <h3>HTML Validator</h3>
+                <img src="images/module-html.png" alt="module page html validator screenshot">
+            </div>
+            <div class="css">
+                <h3>CSS Validator</h3>
+                <img src="images/module-css.png" alt="module page css validator screenshot">
+            </div>
+            <!-- Contact Me -->
+            <h3>Contact Me Page</h3>
+            <div class="html">
+                <h3>HTML Validator</h3>
+                <img src="images/contact-html.png" alt="contact me page html validator screenshot">
+            </div>
+            <div class="css">
+                <h3>CSS Validator</h3>
+                <img src="images/contact-css.png" alt="contact me page css validator screenshot">
+            </div>
+            <!-- Creative -->
+            <h3>Creative Page</h3>
+            <div class="html">
+                <h3>HTML Validator</h3>
+                <img src="images/creative-html.png" alt="creative page html validator screenshot">
+            </div>
+            <div class="css">
+                <h3>CSS Validator</h3>
+                <img src="images/creative-css.png" alt="creative page css validator screenshot">
+            </div>
+            <!-- Thank You -->
+            <h3>Thank You Page</h3>
+            <div class="html">
+                <h3>HTML Validator</h3>
+                <img src="images/thankyou-html.png" alt="thank you page html validator screenshot">
+            </div>
+            <div class="css">
+                <h3>CSS Validator</h3>
+                <img src="images/thankyou-css.png" alt="thank you page css validator screenshot">
+            </div>
+            <!-- Validated -->
+            <h3>Validated Page</h3>
+            <div class="html">
+                <h3>HTML Validator</h3>
+                <img src="images/validated-html.png" alt="validated page html validator screenshot">
+            </div>
+            <div class="css">
+                <h3>CSS Validator</h3>
+                <img src="images/validated-css.png" alt="validated page css validator screenshot">
             </div>
         </div>
     </div>
