--- a/MOD8/artifact04/index.html
+++ b/MOD8/artifact04/index.html
@@ -47,7 +47,7 @@
         <label>
             State:
             <select id="state">
-                <option disabled selected>Select State</option>
+                <option selected disabled>Select State</option>
                 <option>AL</option>
                 <option>AK</option>
                 <option>AZ</option>
@@ -104,9 +104,7 @@
         <label>
             Country:
             <select id="country">
-                <option disabled selected>Select Country</option>
-                <option>United States of America</option>
-                <option disabled>---------------</option>
+                <option selected disabled>Select Country</option>
                 <option>Afghanistan</option>
                 <option>Albania</option>
                 <option>Algeria</option>
@@ -308,13 +306,28 @@
         </label>
         <label>
             Zip Code:
-            <input type="text" id=zipcode>
+            <input type="text" id="zipcode">
         </label>
         <button>Submit</button>
     </form>
     <!-- Errors if Applicable -->
     <div id="errorMessages"></div>
-    <div id="validators"></div>
+    <!-- HTML & CSS Validation -->
+    <div id="validators">
+        <p>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjeremycorpuz.github.io%2FPROG109%2FMOD8%2Fartifact04%2Findex.html" target="_blank">
+                <img src="http://www.w3.org/Icons/valid-xhtml10"
+                     alt="Valid XHTML 1.0" 
+                     height="31" 
+                     width="88">
+            </a>
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fjeremycorpuz.github.io%2FPROG109%2FMOD8%2Fartifact04%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"   target="_blank">
+                <img style="border:0;width:88px;height:31px"
+                     src="http://jigsaw.w3.org/css-validator/images/vcss-blue" 
+                     alt="Valid CSS!">
+            </a>
+        </p>
+    </div>
 </body>
 
 </html>
