--- a/MOD7/artifact03-rhombus/index.html
+++ b/MOD7/artifact03-rhombus/index.html
@@ -14,49 +14,49 @@
     <h2>Created by Jeremy Labuguen</h2>
     <hr>
     <div id="content">
-    <!-- Rhombus Size -->
-    <label>What is the size of Your Rhombus?</label>
-    <br>
-    <input type="text" id="rHeight" value="5" size="5">
-    <br> 
+        <!-- Rhombus Size -->
+        <label>What is the size of Your Rhombus?</label>
+        <br>
+        <input type="text" id="rHeight" value="5" size="5">
+        <br> 
 
-    <!-- Even Position Color -->
-    <label>Color for Even position:</label>
-    <br>
-    <select id="colorEven">
-        <option value="#4169E1">Royal Blue</option>
-        <option value="#F08080">Light Coral</option>
-        <option value="#FFD700">Gold</option>
-    </select>
-    <br>
+        <!-- Even Position Color -->
+        <label>Color for Even position:</label>
+        <br>
+        <select id="colorEven">
+            <option value="#4169E1">Royal Blue</option>
+            <option value="#F08080">Light Coral</option>
+            <option value="#FFD700">Gold</option>
+        </select>
+        <br>
 
-    <!-- Odd Position Color -->
-    <label>Color for Odd position:</label>
-    <br>
-    <select id="colorOdd">
-        <option value="#F4A460">Sandy Brown</option>
-        <option value="#2E8B57">Sea Green</option>
-        <option value="#DA70D6">Orchid</option>
-    </select>
-    <br>
+        <!-- Odd Position Color -->
+        <label>Color for Odd position:</label>
+        <br>
+        <select id="colorOdd">
+            <option value="#F4A460">Sandy Brown</option>
+            <option value="#2E8B57">Sea Green</option>
+            <option value="#DA70D6">Orchid</option>
+        </select>
+        <br>
 
-    <!-- Rhombus Symbol -->
-    <label>Choose a Symbol for Your Rhombus:</label>
-    <br>
-    <select id="symbol">
-    <option value="☺">☺</option>
-    <option value="★">★</option>
-    <option value="♡">♡</option>
-    </select>
-    <br>
+        <!-- Rhombus Symbol -->
+        <label>Choose a Symbol for Your Rhombus:</label>
+        <br>
+        <select id="symbol">
+        <option value="☺">☺</option>
+        <option value="★">★</option>
+        <option value="♡">♡</option>
+        </select>
+        <br>
 
-    <!-- Button -->
-    <button onclick="createRhombus(document.getElementById('rHeight').value,
-    document.getElementById('colorEven').value,
-    document.getElementById('colorOdd').value,
-    document.getElementById('symbol').value);">Display Rhombus</button>
-    <br>
-    
+        <!-- Button -->
+        <button onclick="createRhombus(document.getElementById('rHeight').value,
+        document.getElementById('colorEven').value,
+        document.getElementById('colorOdd').value,
+        document.getElementById('symbol').value);">Display Rhombus</button>
+        <br>
+    </div>
     <!-- Rhombus -->
     <div id="upLeft"></div>
     <div id="upRight"></div>
