Stray <div> tag

--- a/Final/home.html
+++ b/Final/home.html
@@ -41,6 +41,7 @@
                 </li>
             </ul>
         </div>
+    </div>
         <!-- Welcome Statement -->
     </div>
         <p id="one">Welcome!<p>
