--- a/Final/creative.html
+++ b/Final/creative.html
@@ -51,14 +51,13 @@
         </div>
         <h3>Recent Work (Scroll from Left to Right):</h3>
         <div id="portfolio">
-            <img src="images/creative/piece_one.jpg" height="30%" width="30%">
-            <img src="images/creative/piece_two.jpg" height="40%" width="40%">
-            <img src="images/creative/piece_three.jpg" height="20%" width="20%">
+            <img src="images/creative/piece_one.jpg" height="30%" width="30%" alt="Ink drawing of car">
+            <img src="images/creative/piece_two.jpg" height="40%" width="40%" alt="Watercolor painting of car">
+            <img src="images/creative/piece_three.jpg" height="20%" width="20%" alt="Charcoal drawing of a friend">
         </div>
         <div id="video">
             <p>Here's a sketchbook tour of one of my favourite artists - <i>Kim Jung Gi</i></p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Wvy8SbSX-8o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Wvy8SbSX-8o" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </div>
 </body>
