--- a/Final/creative.html
+++ b/Final/creative.html
@@ -51,9 +51,9 @@
         </div>
         <h3>Recent Work (Scroll from Left to Right):</h3>
         <div id="portfolio">
-            <img src="images/creative/piece_one.jpg" height="30%" width="30%" alt="Ink drawing of car">
-            <img src="images/creative/piece_two.jpg" height="40%" width="40%" alt="Watercolor painting of car">
-            <img src="images/creative/piece_three.jpg" height="20%" width="20%" alt="Charcoal drawing of a friend">
+            <img id="piece01" src="images/creative/piece_one.jpg" alt="Ink drawing of car">
+            <img id="piece02" src="images/creative/piece_two.jpg" alt="Watercolor painting of car">
+            <img id="piece03" src="images/creative/piece_three.jpg" alt="Charcoal drawing of a friend">
         </div>
         <div id="video">
             <p>Here's a sketchbook tour of one of my favourite artists - <i>Kim Jung Gi</i></p>
