--- a/Final/creative.html
+++ b/Final/creative.html
@@ -47,7 +47,7 @@
     <div class="content">
         <div id="creativeDescription">
             <p>Here are a few pieces of work from my art portfolio. All of the work displayed below are made with traditional mediums, such as watercolor, ink, and charcoal.</p>
-            <div class="tenor-gif-embed" data-postid="5632946" data-share-method="host" data-aspect-ratio="1.46667" data-width="20%"><a href="https://tenor.com/view/burn-elmo-pyro-burn-it-down-ashes-gif-5632946">Burn Elmo GIF</a>from <a href="https://tenor.com/search/burn-gifs">Burn GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+            <div class="tenor-gif-embed" data-postid="5632946" data-share-method="host" data-aspect-ratio="1.46667" data-width="20%"><a href="https://tenor.com/view/burn-elmo-pyro-burn-it-down-ashes-gif-5632946">Burn Elmo GIF</a>from <a href="https://tenor.com/search/burn-gifs">Burn GIFs</a></div> <script async src="https://tenor.com/embed.js"></script>
         </div>
         <h3>Recent Work (Scroll from Left to Right):</h3>
         <div id="portfolio">
