Removed frameboarder attribute as it's obsolete

--- a/Final/validated.html
+++ b/Final/validated.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <!-- Background Music -->
-    <iframe width="0" height="0" src="//listenonrepeat.com/?v=DykZEOV5wD4#Jeopardy!_Theme_Song_%5B1_Hour%5D" frameborder="0" allowfullscreen></iframe>
+    <iframe width="0" height="0" src="//listenonrepeat.com/?v=DykZEOV5wD4#Jeopardy!_Theme_Song_%5B1_Hour%5D" allowfullscreen></iframe>
     <!-- Validator Section -->
     <h2>Validators</h2>
     <div class="content">
